--- a/calorie_tracker/templates/base.html
+++ b/calorie_tracker/templates/base.html
@@ -11,6 +11,15 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="{{ url_for('static', filename='js/reset.js') }}"></script>
     <script src="{{ url_for('static', filename='js/mobile.js') }}"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2YHGQWYC3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-G2YHGQWYC3');
+    </script>
 </head>
 <style>
 .fade-in {
