Include a consent management screen

--- a/calorie_tracker/templates/landing.html
+++ b/calorie_tracker/templates/landing.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calorie Tracker - Welcome</title>
+    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/f3022a555217a.js" data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/mobile.css') }}" rel="stylesheet">
