--- a/calorie_tracker/templates/base.html
+++ b/calorie_tracker/templates/base.html
@@ -2,9 +2,7 @@
 <html lang="en" class="bg-zinc-900 text-zinc-100 h-full">
 <head>
     <meta charset="UTF-8">
-    <meta name="csrf-token" content="{{ csrf_token() }}">
-    <script type="text/javascript" data-cmp-ab="1" src="https://cdn.consentmanager.net/delivery/autoblocking/f3022a555217a.js" data-cmp-host="c.delivery.consentmanager.net" data-cmp-cdn="cdn.consentmanager.net" data-cmp-codesrc="16"></script>
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
+    <meta name="csrf-token" content="{{ csrf_token() }}">    <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Calorie Tracker</title>
     <link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
