--- a/calorie_tracker/templates/landing.html
+++ b/calorie_tracker/templates/landing.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.png') }}" type="image/png">
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <meta name="theme-color" content="#1f2937"> <!-- zinc-800 for a consistent base -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4190018531218003" crossorigin="anonymous"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2YHGQWYC3"></script>
     <script>
